more review fixes