@@ -12,7 +12,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -76,7 +75,7 @@ public class MultiConfigurationSectionWithConfigurationTest extends Configuratio
     @SuppressWarnings("PMD.JUnitTestContainsTooManyAsserts")
     public void testGetKeysDeepFalse() {
         assertEquals("[boolean, booleanList, characterList, childSection, color, default, double, doubleList, existingSet, get, integer, integerList, item, list, location, long, mapList, object, offlinePlayer, section, string, stringList, vector]",
-                config.getKeys(false).stream().sorted().collect(Collectors.toList()).toString());
+                config.getKeys(false).stream().sorted().toList().toString());
 
         final ConfigurationSection section = config.getConfigurationSection("childSection");
         assertNotNull(section);
@@ -88,7 +87,7 @@ public class MultiConfigurationSectionWithConfigurationTest extends Configuratio
     @SuppressWarnings("PMD.JUnitTestContainsTooManyAsserts")
     public void testGetKeysDeepTrue() {
         assertEquals("[boolean, booleanList, characterList, childSection, childSection.nestedChildSection, childSection.nestedChildSection.key, color, default, default.key, double, doubleList, existingSet, get, integer, integerList, item, list, location, long, mapList, object, offlinePlayer, section, section.key, string, stringList, vector]",
-                config.getKeys(true).stream().sorted().collect(Collectors.toList()).toString());
+                config.getKeys(true).stream().sorted().toList().toString());
 
         final ConfigurationSection section = config.getConfigurationSection("childSection");
         assertNotNull(section);
